# Cornerman

./: LICENSE  Makefile  README.md  app.py  manifest.json  meta.json  prebake.py  prompts.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
eval/: compare.py
responses/: round1_answer_machine.txt  round1_feedback_architecture.json  round2_answer_machine.txt  round2_feedback_architecture.json  round2_transfer_check.json
tests/: test_smoke.py
